--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header2>
         <h2>
             This website has been made with four central objects and functions to make sure everything displays correctly and to verify what is working. These are HyperText Markup Language (HTML), Cascading Style Sheets (CSS), Markdown, and JavaScript. HTML and CSS are central for the display of the website with its content and design whereas JavaScript is central for the function of the website’s external Application Programming Interface (API). This section will cover HTML, CSS, Markdown, and JavaScript as well as API in general and how it has been implemented in this website.<br>
-            Click any of these five buttons to read more:
+            Click any of these five buttons to read more:<br>
             <button
             onclick="loadMarkdown('html.md', 'content');">
                 HTML
